--- a/index.html
+++ b/index.html
@@ -1,39 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>TASK 4</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <h1>SwiftNet</h1>
-        </div>
-        <nav class="nav-items">
+      <div class="logo">
+        <h1>SwiftNet</h1>
+      </div>
+      <nav class="nav-items">
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#restrictions">Restrictions</a>
         <a href="#ccontact-us">Contact Us</a>
-    </nav>
+      </nav>
     </header>
     <section class="hero">
-        <div class="hero-content">
-            <h2>Welcome To SwiftNet</h2>
-            <p>We are cable broadband service providers offering internet and data services through various channel partners.</p>
-        </div>
+      <div class="hero-content">
+        <h2>Welcome To SwiftNet</h2>
+        <p>
+          We are cable broadband service providers offering internet and data
+          services through various channel partners.
+        </p>
+        <button class="cta" type="button">Explore</button>
+      </div>
     </section>
-    <button class="cta" type="button">Explore</button>
+
     <div class="flex-container">
-            <div class="card">Internet Services</div>
-            <div class="card">Cable Television Services</div>
-            <div class="card">Leased Line Services</div>
-            <div class="card">Home Security Services</div>
-            <div class="card">SwiftBox Plans</div>
-            <div class="card">SwiftBox TV Services</div>
+      <div class="card">
+        <h3>Internet Services</h3>
+        <p>
+          Enjoy fast and reliable broadband connections with various plans to
+          suit different needs such as unlimited fiber internet plans,etc.
+        </p>
+        <button class="cta" type="button">More Details</button>
+      </div>
+      <div class="card">
+        <h3>Cable Television Services</h3>
+        <p>
+          Try our cable tv services with over 250 channels, including 2k and 4k
+          quality options.
+        </p>
+        <button class="cta" type="button">More Details</button>
+      </div>
+      <div class="card">
+        <h3>Leased Line Services</h3>
+        <p>
+          Dedicated high-speed intenet services for businesses, traders and
+          call-centers, ensurimg seamless connectivity and efficient operations.
+        </p>
+        <button class="cta" type="button">More Details</button>
+      </div>
+      <div class="card">
+        <h3>Home Security Services</h3>
+        <p>
+          Explore our home security solutions, designed to accomodate your every
+          needs.
+        </p>
+        <button class="cta" type="button">More Details</button>
+      </div>
+      <div class="card">
+        <h3>SwiftNet Plans</h3>
+        <p>
+          Explore the various unlimited plans for each of our fiber and Wi-Fi
+          router packages.
+        </p>
+        <button class="cta" type="button">More Details</button>
+      </div>
+      <div class="card">
+        <h3>SwiftNet TV Services</h3>
+        <p>
+          We offer a SwiftTV net which provides access to our cable TV servicess
+          and possibly other entertainment features.
+        </p>
+        <button class="cta" type="button">More Details</button>
+      </div>
     </div>
-    <footer class="footer">MORE</footer>
-</body>
+    <footer class="footer">NEXT</footer>
+  </body>
 </html>
